# fourdvarjax

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  Makefile  README.md  codecov.yaml  pyproject.toml  release-please-config.json
.github/workflows/: ci.yml  format.yml  lint.yml  pytest.yaml  typecheck.yml
docs/: 01_problem_setting.md  02_variational_cost.md  03_autoencoder_architecture.md  04_learned_gradient_solver.md  05_gradient_modulator.md  06_implicit_differentiation.md  07_training_objective.md  08_algorithm_pseudocode.md  09_1d_lorenz63.md  10_multivariate_2d.md  11_model_vs_learned_prior.md  README.md  notation.md  references.md
fourdvarjax/: __init__.py
fourdvarjax/_src/: __init__.py  _types.py  costs.py  grad_mod.py  model.py  priors.py  solver.py  training.py
fourdvarjax/_src/utils/: __init__.py  dynamical_systems.py  masks.py  noise.py  patches.py  preprocessing.py  standardize.py  viz.py
notebooks/: 01_model_based_4dvar_L63.py  02_unrolling_vs_fixedpoint_L63.py  03_4dvarnet_L63.py  04_4dvarnet_2d_demo.py  05_end_to_end_L63.py  06_end_to_end_L96.py  07_prior_pretraining_L63.py  08_classical_4dvar_vs_4dvarnet_L63.py
tests/: __init__.py  conftest.py  test_costs.py  test_grad_mod.py  test_model.py  test_priors.py  test_solver.py  test_training.py  test_types.py
tests/test_utils/: __init__.py  test_dynamical_systems.py  test_masks.py  test_noise.py  test_patches.py  test_preprocessing.py  test_standardize.py  test_viz.py
