[project]
name = "fourdvarjax"
version = "0.1.4"
description = "Modular variational data assimilation with learned components (JAX/Flax NNX)"
authors = [
    { name = "Juan Emmanuel Johnson", email = "jemanjohnson34@gmail.com" },
]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.12,<3.14"
keywords = ["4DVar", "data assimilation", "variational", "jax", "deep learning"]
classifiers = [
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: MacOS",
    "Operating System :: POSIX :: Linux",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Science/Research",
    "Development Status :: 2 - Pre-Alpha",
]
dependencies = [
    "jax>=0.5",
    "jaxlib>=0.5",
    "flax>=0.12",
    "optax>=0.2",
    "jaxtyping>=0.2.28",
    "einops>=0.8",
    "jaxopt",
    "diffrax>=0.5",
    "equinox>=0.11",
]

[project.urls]
Repository = "https://github.com/jejjohnson/fourdvarjax"

[project.optional-dependencies]
test = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "pytest-pretty>=1.2.0",
    "pytest-xdist>=3.5.0",
    "coverage>=7.4.0",
    "xdoctest>=1.1.3",
    "mktestdocs>=0.2.2",
    "xarray>=2024.0",
    "numpy>=1.26",
    "matplotlib>=3.9.0",
]
dev = [
    "ruff>=0.8.0",
    "pre-commit>=4.0.0",
    "nbstripout>=0.7.1",
    "ty>=0.0.19",
]
data = [
    "xarray>=2024.0",
    "numpy>=1.26",
]
viz = [
    "matplotlib>=3.9.0",
    "seaborn>=0.13.2",
]
exp = [
    "wandb>=0.18.0",
    "loguru>=0.7.2",
    "hydra-core>=1.3.2",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.2",
    "autoroot>=1.0.0",
]
jlab = [
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
    "autoroot>=1.0.0",
    "jupytext>=1.16.0",
]
examples = [
    "matplotlib>=3.9.0",
    "loguru>=0.7.2",
    "tqdm>=4.66.0",
]
docs = [
    "mkdocs>=1.6.0",
    "mkdocs-material>=9.5.0",
    "mkdocstrings[python]>=0.26.0",
    "mkdocs-jupyter>=0.25.0",
    "mkdocs-gen-files>=0.5.0",
    "mkdocs-literate-nav>=0.6.1",
    "mkdocs-git-authors-plugin>=0.9.0",
    "pymdown-extensions>=10.11",
    "pygments>=2.18.0",
    "mkdocs-bibtex>=2.16.0",
    "mdx-truly-sane-lists>=1.3",
    "linkify-it-py>=2.0.3",
    "ipython>=8.28.0",
    "ipykernel>=6.29.0",
    "jupytext>=1.16.0",
    "matplotlib>=3.9.0",
]
all = [
    "fourdvarjax[test,dev,data,viz,exp,jlab,docs,examples]",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "fourdvarjax[dev,test]",
]

[tool.pytest.ini_options]
filterwarnings = ["error", "ignore::DeprecationWarning"]
testpaths = ["fourdvarjax", "tests"]
xfail_strict = true
addopts = ["-ra", "--strict-markers", "--tb=short"]
markers = ["slow: marks tests as slow (deselect with '-m \"not slow\"')"]

[tool.ruff]
fix = true
line-length = 88
target-version = "py312"
exclude = ["docs/", "notebooks/"]

[tool.ruff.lint]
select = [
    "F",      # pyflakes
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "I",      # isort
    "UP",     # pyupgrade
    "YTT",    # flake8-2020
    "B",      # flake8-bugbear
    "Q",      # flake8-quotes
    "PLE",    # pylint errors
    "PLR",    # pylint refactor
    "PLW",    # pylint warnings
    "PIE",    # misc lints
    "PYI",    # flake8-pyi
    "TID",    # tidy imports
    "ISC",    # implicit string concatenation
    "RUF",    # ruff-specific rules
]
ignore = [
    "E402",     # module level import not at top of file
    "E731",     # do not assign a lambda expression, use a def
    "E501",     # line too long (handled by formatter)
    "S101",     # use of assert
    "F722",     # syntax error in forward annotation
    "E741",     # ambiguous variable name (math notation)
    "E743",     # ambiguous function name (math notation)
    "F821",     # undefined name (jaxtyping dimension annotations)
    "PLR2004",  # magic value comparison
    "PLR0913",  # too many arguments
    "ISC001",   # conflicts with formatter
    "RUF002",   # ambiguous unicode characters in docstrings (math notation)
    "RUF022",   # __all__ not sorted (we use logical grouping)
    "RUF046",   # int(round(...)) is intentional for type safety
    "PYI061",   # style preference
]
unfixable = ["ERA001", "F841", "T201", "T203"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-sort-within-sections = true

[tool.ruff.format]
docstring-code-format = true

[tool.coverage.report]
fail_under = 50
precision = 1
show_missing = true
skip_covered = true

[tool.coverage.run]
branch = true
command_line = "--module pytest"
data_file = "reports/.coverage"
source = ["fourdvarjax"]

[tool.coverage.xml]
output = "reports/coverage.xml"
